<resources>
    <string name="app_name">MESS APP</string>
    <string name="login">Login</string>
    <string name="sign_in">Sign in</string>
    <string name="welcome">WELCOME!</string>
    <string name="new_user_sign_in">New user? Sign in.</string>

    <string name="home_second">Home Second</string>
    <string name="forgot_pw_msg">Enter your registered email. A link will be sent to you from where you can update your password.</string>
    <string name="enter_email">Enter email</string>
    <string name="send_email">Send Email</string>
    <string name="enter_password">Enter password</string>
    <string name="forgot_password">Forgot Password?</string>

    <string name="enter_icon">&#xf0a9;</string>
    <string name="plus_circle_icon">&#xf055;</string>
    <string name="admin">&#xf4fe;</string>
    <string name="feedback">&#xf086;</string>
    <string name="menu">&#xf2e7;</string>
    <string name="logouticon">&#xf2f5;</string>

    <string name="dinner">DINNER</string>
    <string name="snacks">SNACKS</string>
    <string name="lunch">LUNCH</string>
    <string name="breakfast">BREAKFAST</string>
    <string name="choose_your_hostel">CHOOSE YOUR HOSTEL\t\t\t</string>
    <string name="no_hostel_selected">No hostel selected</string>

    <string-array name="hostel_list">
        <item>Select hostel</item>
        <item>QC-1</item>
        <item>QC-2</item>
        <item>QC-3</item>
        <item>QC-4</item>
    </string-array>

    <string-array name="weekdays">
        <item>Select week day</item>
        <item>SUNDAY</item>
        <item>MONDAY</item>
        <item>TUESDAY</item>
        <item>WEDNESDAY</item>
        <item>THURSDAY</item>
        <item>FRIDAY</item>
        <item>SATURDAY</item>
    </string-array>

    <string-array name="meal">
        <item>Select meal</item>
        <item>BREAKFAST</item>
        <item>LUNCH</item>
        <item>SNACKS</item>
        <item>DINNER</item>
    </string-array>

    <string name="no_cardetails">Click on the button below to begin creating your reminder!</string>
    <string name="title_activity_add_reminder">Add Reminder</string>
    <string name="title_activity_edit_reminder">Edit Reminder</string>
    <string name="title_activity_licenses">Licenses</string>

    <string name="add_reminder">Reminder</string>
    <string name="details">Details</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="repeat">Repeat</string>
    <string name="repeat_off">Off</string>
    <string name="repeat_no">Repetition Interval </string>
    <string name="repeat_type">Type of Repetitions</string>

    <string name="action_discard_reminder">Discard Reminder</string>
    <string name="action_save_reminder">Save Reminder</string>

    <string name="editor_activity_title_new_reminder">Add Reminder Details</string>
    <string name="editor_activity_title_edit_reminder">Edit Reminder</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>

    <string name="keep_editing">Keep Editing</string>
    <string name="delete_dialog_msg">Delete this Reminder?</string>

    <string name="delete">Delete</string>

    <string name="cancel">Cancel</string>
    <string name="editor_delete_reminder_successful">Reminder deleted</string>

    <string name="editor_delete_reminder_failed">Error with deleting reminder</string>

    <string name="editor_insert_reminder_successful">Reminder saved</string>

    <string name="editor_insert_reminder_failed">Error with saving reminder</string>

    <string name="editor_update_reminder_successful">Reminder updated</string>

    <string name="editor_update_reminder_failed">Error with updating reminder</string>

    <string name="reminder_title">AlarmReminder</string>

</resources>
