<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:background="@color/white"
        android:layout_margin="20dp"
        android:padding="10dp">

        <LinearLayout
            android:id="@+id/layout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:fontFamily="@font/open_sans"
                android:layout_gravity="center_horizontal"
                android:text="@string/welcome"
                android:textStyle="bold"
                android:textColor="#000000"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/default_edittext_border"
                android:hint="@string/enter_email"
                android:padding="5dp"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/default_edittext_border"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:padding="5dp" />

            <Button
                android:id="@+id/btLogin"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:textSize="18sp"
                android:background="@color/blue_button"
                android:layout_gravity="center_horizontal"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/tvForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/forgot_password"
                android:textColor="@color/blue_button"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvNewuser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="15dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/new_user_sign_in"
                android:textColor="@color/blue_button"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:fontFamily="@font/open_sans"
                android:layout_gravity="center_horizontal"
                android:text="@string/forgot_pw_msg"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/etEmail2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/default_edittext_border"
                android:hint="@string/enter_email"
                android:inputType="textEmailAddress"
                android:padding="5dp" />

            <Button
                android:id="@+id/btSendEmail"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_margin="20dp"
                android:textSize="18sp"
                android:padding="10dp"
                android:background="@color/blue_button"
                android:layout_gravity="center_horizontal"
                android:text="@string/send_email"
                android:textAllCaps="false"
                android:textColor="#FFFFFF" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</ScrollView>