<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/menu_card"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:padding="10dp"
    android:background="@color/light_yellow"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:visibility="visible"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/breakfast"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/breakfast_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text=""
        android:gravity="center"
        android:padding="10dp"
        android:textSize="18sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/lunch"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/lunch_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text=""
        android:gravity="center"
        android:padding="10dp"
        android:textSize="18sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/snacks"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/snacks_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text=""
        android:gravity="center"
        android:padding="10dp"
        android:textSize="18sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/dinner"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/dinner_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text=""
        android:gravity="center"
        android:padding="10dp"
        android:textSize="18sp"/>

</LinearLayout>