<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            layout="@layout/toolbar"/>

        <ScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/open_sans"
                    android:text="WHAT WE GOT \nTODAY\nFOR YOU!"
                    android:textAlignment="center"
                    android:textSize="30sp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:textStyle="bold|italic" />

                <LinearLayout
                    android:id="@+id/layout1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:visibility="visible"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <LinearLayout
                            android:id="@+id/breakfast_layout"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:background="@color/colorPrimaryLight">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:layout_margin="20dp"
                                android:fontFamily="@font/open_sans"
                                android:text="@string/breakfast"
                                android:textColor="@color/black"
                                android:textSize="22sp"
                                android:textStyle="bold" />
                            <TextView
                                android:id="@+id/breakfast_text"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_margin="10dp"
                                android:fontFamily="@font/montserrat"
                                android:gravity="center"
                                android:textColor="@color/black"
                                android:textSize="20sp" />

                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <LinearLayout
                            android:id="@+id/lunch_layout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:background="@color/light_yellow">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:layout_margin="20dp"
                                android:fontFamily="@font/open_sans"
                                android:text="@string/lunch"
                                android:textColor="#000000"
                                android:textSize="24sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/lunch_text"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_margin="10dp"
                                android:fontFamily="@font/montserrat"
                                android:gravity="center"
                                android:textColor="@color/black"
                                android:textSize="20sp" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>

            <LinearLayout
                android:id="@+id/layout2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="visible"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <LinearLayout
                        android:id="@+id/snacks_layout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:background="@color/light_yellow">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_margin="20dp"
                            android:fontFamily="@font/open_sans"
                            android:text="@string/snacks"
                            android:textColor="#000000"
                            android:textSize="24sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/snacks_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_margin="10dp"
                            android:fontFamily="@font/montserrat"
                            android:gravity="center"
                            android:textColor="@color/black"
                            android:textSize="20sp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <LinearLayout
                        android:id="@+id/layout4"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:background="@color/colorPrimaryLight">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_margin="20dp"
                            android:fontFamily="@font/open_sans"
                            android:text="@string/dinner"
                            android:textColor="#000000"
                            android:textSize="24sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/dinner_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_margin="10dp"
                            android:fontFamily="@font/montserrat"
                            android:gravity="center"
                            android:textColor="@color/black"
                            android:textSize="20sp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/black"
        android:fitsSystemWindows="true"
        app:itemTextAppearance="@style/NavDrawerTextStyle"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_menu"/>

</androidx.drawerlayout.widget.DrawerLayout>